--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
         runtime-versions:
             nodejs: 12
         commands:
+            - echo "we are here"
             - sudo apt install npm
     build:
         commands:
