--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
             nodejs: 12
         commands:
             - echo "we are here"
-            - sudo apt install npm
+            - apt install npm
     build:
         commands:
             - npm run build
