--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,10 @@ version: 0.2
 phases:
     install:
         runtime-versions:
-            nodejs: 12
+            nodejs: 14
         commands:
             - echo "we are here"
-            - apt install npm
+            - apt-get install npm
     build:
         commands:
             - npm run build
