--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
             nodejs: 14
         commands:
             - echo "we are here"
-            - apt-get install npm
+            - apt-get update
     build:
         commands:
             - npm run build
