--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,8 @@ phases:
         commands:
             - echo "we are here"
             - apt-get update
+            - node -v
+            - apt-get install npm -y
     build:
         commands:
             - npm run build
