--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,5 +17,5 @@ phases:
             - ls
 artifacts:
     files:
-        - '**/build/*'
         - '**/appspec.yml'
+    base-directory: '**/build'
