--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,4 +18,6 @@ phases:
 artifacts:
     files:
         - '**/appspec.yml'
-    base-directory: '/build'
+    base-directory: 'build'
+            files:
+                - '**/*'
