--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,9 +15,8 @@ phases:
         commands:
             - npm run build
             - ls
+            - echo $CODEBUILD_SRC_DIR
 artifacts:
     files:
         - '**/appspec.yml'
-    base-directory: build
-            files:
-                - '**/*'
+        - build
