--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,8 +15,8 @@ phases:
         commands:
             - npm run build
             - ls
-            - mv -v **/appspec.yml **/build/
-            - ls
 artifacts:
     files:
-        - 'build'
+        - "**/*"
+    base-directory: 'build'
+    discard-paths: yes
