--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
     post_build:
         commands:
             - ls
-            - mv appspec.yml /build
+            - cp ./appspec.yml /build
             - cd ./build && ls
 artifacts:
     files:
