--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,9 @@ phases:
         commands:
             - npm run build
             - ls
+            - mv /build/* /hello/
+            - cd ./hello && ls
+            - cd ..
     post_build:
         commands:
             - ls
