--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,13 +16,10 @@ phases:
         commands:
             - npm run build
             - ls
-            - mv build/* hello
-            - cd ./hello && ls
-            - cd ..
     post_build:
         commands:
             - ls
-            - mv appspec.yml /build
+            - mv appspec.yml build
             - cd ./build && ls
 artifacts:
     files:
